tests/baselines/reference/importHelpersInIsolatedModules.errors.txt
tests/cases/compiler/script.ts(1,1): error TS1208: 'script.ts' cannot be compiled under '--isolatedModules' because it is considered a global script file. Add an import, export, or an empty 'export {}' statement to make it a module.


==== tests/cases/compiler/external.ts (0 errors) ====
    export class A { }
    export class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    
==== tests/cases/compiler/script.ts (1 errors) ====
    class A { }
    ~~~~~
!!! error TS1208: 'script.ts' cannot be compiled under '--isolatedModules' because it is considered a global script file. Add an import, export, or an empty 'export {}' statement to make it a module.
    class B extends A { }
    
    declare var dec: any;
    
    @dec
    class C {
        method(@dec x: number) {
        }
    }
    
==== tests/cases/compiler/tslib.d.ts (0 errors) ====
    export declare function __extends(d: Function, b: Function): void;
    export declare function __assign(t: any, ...sources: any[]): any;
    export declare function __decorate(decorators: Function[], target: any, key?: string | symbol, desc?: any): any;
    export declare function __param(paramIndex: number, decorator: Function): Function;
    export declare function __metadata(metadataKey: any, metadataValue: any): Function;
    export declare function __awaiter(thisArg: any, _arguments: any, P: Function, generator: Function): any;
    